@@ -30,6 +30,7 @@ import io.airbyte.protocol.models.JsonSchemaType;
 import io.airbyte.protocol.models.v0.AirbyteCatalog;
 import io.airbyte.protocol.models.v0.CatalogHelpers;
 import io.airbyte.protocol.models.v0.ConfiguredAirbyteCatalog;
+import io.airbyte.protocol.models.v0.ConfiguredAirbyteStream;
 import io.airbyte.protocol.models.v0.SyncMode;
 import io.debezium.connector.mongodb.ResumeTokens;
 import java.util.Collections;
@@ -46,9 +47,10 @@ import org.junit.jupiter.api.Test;
 class MongoDbDebeziumStateUtilTest {
 
   private static final String DATABASE = "test-database";
+  private static final String DATABASE_1 = "test-database-1";
   private static final String RESUME_TOKEN = "8264BEB9F3000000012B0229296E04";
 
-  private static final AirbyteCatalog CATALOG = new AirbyteCatalog().withStreams(List.of(
+  private static final AirbyteCatalog SINGLE_DB_CATALOG = new AirbyteCatalog().withStreams(List.of(
       CatalogHelpers.createAirbyteStream(
           "test-collection",
           DATABASE,
@@ -56,7 +58,47 @@ class MongoDbDebeziumStateUtilTest {
           Field.of("string", JsonSchemaType.STRING))
           .withSupportedSyncModes(List.of(SyncMode.INCREMENTAL))
           .withSourceDefinedPrimaryKey(List.of(List.of("_id")))));
-  protected static final ConfiguredAirbyteCatalog CONFIGURED_CATALOG = CatalogHelpers.toDefaultConfiguredCatalog(CATALOG);
+
+  protected static final ConfiguredAirbyteCatalog SINGLE_DB_CONFIGURED_CATALOG = CatalogHelpers.toDefaultConfiguredCatalog(SINGLE_DB_CATALOG);
+
+  private static final AirbyteCatalog MULTIPLE_DB_CATALOG = new AirbyteCatalog().withStreams(List.of(
+      CatalogHelpers.createAirbyteStream(
+          "test-collection",
+          DATABASE,
+          Field.of("id", JsonSchemaType.INTEGER),
+          Field.of("string", JsonSchemaType.STRING))
+          .withSupportedSyncModes(List.of(SyncMode.INCREMENTAL))
+          .withSourceDefinedPrimaryKey(List.of(List.of("_id"))),
+      CatalogHelpers.createAirbyteStream(
+          "test-collection-1",
+          DATABASE_1,
+          Field.of("id", JsonSchemaType.INTEGER),
+          Field.of("name", JsonSchemaType.STRING))
+          .withSupportedSyncModes(List.of(SyncMode.INCREMENTAL))
+          .withSourceDefinedPrimaryKey(List.of(List.of("_id")))));
+
+  List<ConfiguredAirbyteStream> database1Streams = CatalogHelpers.toDefaultConfiguredCatalog(MULTIPLE_DB_CATALOG).getStreams()
+      .stream().filter(stream -> stream.getStream().getNamespace().equals(DATABASE))
+      .toList();
+
+  List<ConfiguredAirbyteStream> database2Streams = CatalogHelpers.toDefaultConfiguredCatalog(MULTIPLE_DB_CATALOG).getStreams().stream()
+      .filter(stream -> stream.getStream().getNamespace().equals(DATABASE_1))
+      .toList();
+
+  final List<Bson> SINGLE_DB_PIPELINE = Collections.singletonList(Aggregates.match(
+      Filters.or(List.of(
+          Filters.and(
+              Filters.eq("ns.db", DATABASE),
+              Filters.in("ns.coll", List.of("test-collection")))))));
+
+  private final List<Bson> MULTIPLE_DB_PIPELINE = Collections.singletonList(Aggregates.match(
+      Filters.or(List.of(
+          Filters.and(
+              Filters.eq("ns.db", DATABASE),
+              Filters.in("ns.coll", List.of("test-collection"))),
+          Filters.and(
+              Filters.eq("ns.db", DATABASE_1),
+              Filters.in("ns.coll", "test-collection-1"))))));
 
   private MongoDbDebeziumStateUtil mongoDbDebeziumStateUtil;
 
@@ -97,7 +139,7 @@ class MongoDbDebeziumStateUtilTest {
     final Optional<BsonDocument> parsedOffset =
         mongoDbDebeziumStateUtil.savedOffset(
             baseProperties,
-            CONFIGURED_CATALOG,
+            SINGLE_DB_CONFIGURED_CATALOG,
             initialState,
             config);
     assertTrue(parsedOffset.isPresent());
@@ -106,15 +148,16 @@ class MongoDbDebeziumStateUtilTest {
 
   @Test
   void testOffsetDataFormat() {
-    final JsonNode offsetState = MongoDbDebeziumStateUtil.formatState("test_server_id", RESUME_TOKEN);
+    final JsonNode offsetState = MongoDbDebeziumStateUtil.formatState("mongodb://host:12345/", RESUME_TOKEN);
 
     assertNotNull(offsetState);
-    assertEquals("[\"" + "test-server-id" + "\",{\""
-        + MongoDbDebeziumConstants.OffsetState.KEY_SERVER_ID + "\":\"" + "test-server-id" + "\"}]", offsetState.fieldNames().next());
+    final String expectedNormalized = MongoDbDebeziumPropertiesManager.normalizeToDebeziumFormat("mongodb://host:12345/");
+    assertEquals("[\"" + expectedNormalized + "\",{\""
+        + MongoDbDebeziumConstants.OffsetState.KEY_SERVER_ID + "\":\"" + expectedNormalized + "\"}]", offsetState.fieldNames().next());
   }
 
   @Test
-  void testIsResumeTokenValid() {
+  void testIsResumeTokenValidSingleDb() {
     final BsonDocument resumeToken = ResumeTokens.fromData(RESUME_TOKEN);
 
     final ChangeStreamIterable<BsonDocument> changeStreamIterable = mock(ChangeStreamIterable.class);
@@ -126,17 +169,32 @@ class MongoDbDebeziumStateUtilTest {
     when(mongoChangeStreamCursor.getResumeToken()).thenReturn(resumeToken);
     when(changeStreamIterable.cursor()).thenReturn(mongoChangeStreamCursor);
     when(changeStreamIterable.resumeAfter(resumeToken)).thenReturn(changeStreamIterable);
-    final List<Bson> pipeline = Collections.singletonList(Aggregates.match(
-        Filters.or(List.of(
-            Filters.and(
-                Filters.eq("ns.db", DATABASE),
-                Filters.in("ns.coll", List.of("test-collection")))))));
-    when(mongoClient.watch(pipeline, BsonDocument.class)).thenReturn(changeStreamIterable);
-    assertTrue(mongoDbDebeziumStateUtil.isValidResumeToken(resumeToken, mongoClient, List.of(DATABASE), List.of(CONFIGURED_CATALOG.getStreams())));
+    when(mongoClient.getDatabase(DATABASE)).thenReturn(mongoDatabase);
+    when(mongoDatabase.watch(SINGLE_DB_PIPELINE, BsonDocument.class)).thenReturn(changeStreamIterable);
+    assertTrue(
+        mongoDbDebeziumStateUtil.isValidResumeToken(resumeToken, mongoClient, List.of(DATABASE), List.of(SINGLE_DB_CONFIGURED_CATALOG.getStreams())));
   }
 
   @Test
-  void testIsResumeTokenInvalid() {
+  void testIsResumeTokenValidMultipleDb() {
+    final BsonDocument resumeToken = ResumeTokens.fromData(RESUME_TOKEN);
+
+    final ChangeStreamIterable<BsonDocument> changeStreamIterable = mock(ChangeStreamIterable.class);
+    final MongoChangeStreamCursor<ChangeStreamDocument<BsonDocument>> mongoChangeStreamCursor =
+        mock(MongoChangeStreamCursor.class);
+    final MongoClient mongoClient = mock(MongoClient.class);
+    final MongoDatabase mongoDatabase = mock(MongoDatabase.class);
+
+    when(mongoChangeStreamCursor.getResumeToken()).thenReturn(resumeToken);
+    when(changeStreamIterable.cursor()).thenReturn(mongoChangeStreamCursor);
+    when(changeStreamIterable.resumeAfter(resumeToken)).thenReturn(changeStreamIterable);
+    when(mongoClient.watch(MULTIPLE_DB_PIPELINE, BsonDocument.class)).thenReturn(changeStreamIterable);
+    assertTrue(mongoDbDebeziumStateUtil.isValidResumeToken(resumeToken, mongoClient, List.of(DATABASE, DATABASE_1),
+        List.of(database1Streams, database2Streams)));
+  }
+
+  @Test
+  void testIsResumeTokenInvalidSingleDb() {
     final BsonDocument resumeToken = ResumeTokens.fromData(RESUME_TOKEN);
 
     final ChangeStreamIterable<BsonDocument> changeStreamIterable = mock(ChangeStreamIterable.class);
@@ -149,13 +207,30 @@ class MongoDbDebeziumStateUtilTest {
     when(mongoChangeStreamCursor.getResumeToken()).thenReturn(resumeToken);
     when(changeStreamIterable.cursor()).thenThrow(new MongoCommandException(new BsonDocument(), new ServerAddress()));
     when(changeStreamIterable.resumeAfter(resumeToken)).thenReturn(changeStreamIterable);
-    final List<Bson> pipeline = Collections.singletonList(Aggregates.match(
-        Filters.or(List.of(
-            Filters.and(
-                Filters.eq("ns.db", DATABASE),
-                Filters.in("ns.coll", List.of("test-collection")))))));
-    when(mongoClient.watch(pipeline, BsonDocument.class)).thenReturn(changeStreamIterable);
-    assertFalse(mongoDbDebeziumStateUtil.isValidResumeToken(resumeToken, mongoClient, List.of(DATABASE), List.of(CONFIGURED_CATALOG.getStreams())));
+    when(mongoClient.getDatabase(DATABASE)).thenReturn(mongoDatabase);
+    when(mongoDatabase.watch(SINGLE_DB_PIPELINE, BsonDocument.class)).thenReturn(changeStreamIterable);
+    assertFalse(
+        mongoDbDebeziumStateUtil.isValidResumeToken(resumeToken, mongoClient, List.of(DATABASE), List.of(SINGLE_DB_CONFIGURED_CATALOG.getStreams())));
+  }
+
+  @Test
+  void testIsResumeTokenInvalidMultipleDb() {
+    final BsonDocument resumeToken = ResumeTokens.fromData(RESUME_TOKEN);
+
+    final ChangeStreamIterable<BsonDocument> changeStreamIterable = mock(ChangeStreamIterable.class);
+    final MongoChangeStreamCursor<ChangeStreamDocument<BsonDocument>> mongoChangeStreamCursor =
+        mock(MongoChangeStreamCursor.class);
+
+    final MongoClient mongoClient = mock(MongoClient.class);
+    final MongoDatabase mongoDatabase = mock(MongoDatabase.class);
+
+    when(mongoChangeStreamCursor.getResumeToken()).thenReturn(resumeToken);
+    when(changeStreamIterable.cursor()).thenThrow(new MongoCommandException(new BsonDocument(), new ServerAddress()));
+    when(changeStreamIterable.resumeAfter(resumeToken)).thenReturn(changeStreamIterable);
+    when(mongoClient.watch(MULTIPLE_DB_PIPELINE, BsonDocument.class)).thenReturn(changeStreamIterable);
+    when(mongoClient.watch(MULTIPLE_DB_PIPELINE, BsonDocument.class)).thenReturn(changeStreamIterable);
+    assertFalse(mongoDbDebeziumStateUtil.isValidResumeToken(resumeToken, mongoClient, List.of(DATABASE, DATABASE_1),
+        List.of(database1Streams, database2Streams)));
   }
 
 }
